[gd_scene load_steps=17 format=3 uid="uid://dtox7gk5rw13d"]

[ext_resource type="Script" path="res://Scripts/gameCrossbow.gd" id="1_yfyfs"]
[ext_resource type="PackedScene" uid="uid://nfc1oy302yj8" path="res://Scene/MAp/Tower.tscn" id="2_sm4yl"]
[ext_resource type="Script" path="res://Scripts/pivot.gd" id="3_dgbnj"]
[ext_resource type="PackedScene" uid="uid://doyn3ck1c4coi" path="res://Scene/dragon.tscn" id="4_04ksr"]
[ext_resource type="AudioStream" uid="uid://d2ngftqngo7im" path="res://Assets/Sounds/LevelSong.wav" id="6_nsb57"]
[ext_resource type="PackedScene" uid="uid://chxa5onwgnh1b" path="res://Scene/Player/player_bow.tscn" id="7_pfmni"]
[ext_resource type="PackedScene" uid="uid://ddcitcw8wwtqs" path="res://Scene/MAp/TestMap.tscn" id="7_y1xs8"]
[ext_resource type="PackedScene" uid="uid://bin1d5aq72b47" path="res://Scene/MAp/map_bloking.tscn" id="8_gldg5"]
[ext_resource type="PackedScene" uid="uid://wvei2d2d2r7w" path="res://Scene/Explotion_Particles.tscn" id="9_8i87b"]
[ext_resource type="PackedScene" uid="uid://besmhtseuiucy" path="res://Fire.tscn" id="10_m568h"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_8ksl2"]
sky_top_color = Color(0.565454, 0.584515, 0.917651, 1)
sky_horizon_color = Color(0.697291, 0.755682, 0.830682, 1)
ground_bottom_color = Color(0.223711, 0.438214, 0.405078, 1)
ground_horizon_color = Color(0.697291, 0.755682, 0.830682, 1)

[sub_resource type="Sky" id="Sky_2tm3j"]
sky_material = SubResource("ProceduralSkyMaterial_8ksl2")

[sub_resource type="Environment" id="Environment_3r3by"]
background_mode = 2
sky = SubResource("Sky_2tm3j")
tonemap_mode = 2

[sub_resource type="Animation" id="Animation_41d4g"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-25, 25, 0)]
}

[sub_resource type="Animation" id="Animation_m6xke"]
resource_name = "bobing"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(-30, 20, 0), Vector3(-25, 28, 5), Vector3(-30, 20, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_aak3a"]
_data = {
"RESET": SubResource("Animation_41d4g"),
"bobing": SubResource("Animation_m6xke")
}

[node name="Game" type="Node3D"]
script = ExtResource("1_yfyfs")

[node name="Map" type="Node3D" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="Map"]
environment = SubResource("Environment_3r3by")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Map"]
transform = Transform3D(-0.5, 0.75, -0.433013, 0, 0.5, 0.866025, 0.866025, 0.433013, -0.25, 0, 0, 0)
shadow_enabled = true

[node name="Tower" parent="Map" instance=ExtResource("2_sm4yl")]
collision_layer = 11
collision_mask = 0

[node name="pivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 1.74846e-07, 0, 1, 0, -1.74846e-07, 0, 1, 0, 0, 0)
script = ExtResource("3_dgbnj")
dragon_speed = 18

[node name="Dragon" parent="pivot" instance=ExtResource("4_04ksr")]
transform = Transform3D(0.642788, 0.766044, -5.95772e-09, -0.766044, 0.642788, -4.52534e-08, -3.08366e-08, 3.36522e-08, 1, -25, 25, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="pivot/Dragon"]
libraries = {
"": SubResource("AnimationLibrary_aak3a")
}
autoplay = "bobing"

[node name="VillageTimer" type="Timer" parent="."]
wait_time = 9.0
one_shot = true

[node name="Music" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("6_nsb57")
autoplay = true

[node name="map" parent="." instance=ExtResource("7_y1xs8")]
visible = false

[node name="PlayerBow" parent="." instance=ExtResource("7_pfmni")]

[node name="map_Bloking" parent="." instance=ExtResource("8_gldg5")]

[node name="Vfxs" type="Node" parent="."]

[node name="Vfx1" type="Node" parent="Vfxs"]
process_mode = 4

[node name="Debris" parent="Vfxs/Vfx1" instance=ExtResource("9_8i87b")]
transform = Transform3D(3.86206e-08, 0.883537, 0.468362, 1, -4.37114e-08, 0, 2.04727e-08, 0.468362, -0.883537, 18.7792, 0.0156922, -42.4084)
emitting = true
visibility_aabb = AABB(-4.08619, -4, -4, 8.17237, 8, 8)

[node name="Fire" parent="Vfxs/Vfx1" instance=ExtResource("10_m568h")]
transform = Transform3D(-0.883537, 0, 0.468362, 0, 1, 0, -0.468362, 0, -0.883537, 25.0737, 3.33452, -46.7287)

[node name="Fire2" parent="Vfxs/Vfx1" instance=ExtResource("10_m568h")]
transform = Transform3D(-0.883537, 0, 0.468362, 0, 1, 0, -0.468362, 0, -0.883537, 23.1402, 1.50235, -47.248)

[node name="Fire3" parent="Vfxs/Vfx1" instance=ExtResource("10_m568h")]
transform = Transform3D(-0.883537, 0, 0.468362, 0, 1, 0, -0.468362, 0, -0.883537, 27.0011, 2.12889, -44.0548)

[node name="Fire4" parent="Vfxs/Vfx1" instance=ExtResource("10_m568h")]
transform = Transform3D(-0.883537, 0, 0.468362, 0, 1, 0, -0.468362, 0, -0.883537, 17.2965, 0.217556, -35.465)

[node name="Fire5" parent="Vfxs/Vfx1" instance=ExtResource("10_m568h")]
transform = Transform3D(-0.883537, 0, 0.468362, 0, 1, 0, -0.468362, 0, -0.883537, 27.868, -1.07939, -35.9152)

[node name="Vfx2" type="Node" parent="Vfxs"]
process_mode = 4

[node name="Debris" parent="Vfxs/Vfx2" instance=ExtResource("9_8i87b")]
transform = Transform3D(2.71632e-08, 0.621421, 0.783477, 1, -4.37114e-08, 0, 3.42469e-08, 0.783477, -0.621421, -57.3701, 4.51422, -0.818708)
emitting = true

[node name="Fire" parent="Vfxs/Vfx2" instance=ExtResource("10_m568h")]
transform = Transform3D(-0.621421, 0, 0.783477, 0, 1, 0, -0.783477, 0, -0.621421, -62.9216, 4.4109, 1.50022)

[node name="Fire2" parent="Vfxs/Vfx2" instance=ExtResource("10_m568h")]
transform = Transform3D(-0.621421, 0, 0.783477, 0, 1, 0, -0.783477, 0, -0.621421, -53.6693, 5.90367, 8.49037)

[node name="Fire3" parent="Vfxs/Vfx2" instance=ExtResource("10_m568h")]
transform = Transform3D(-0.621421, 0, 0.783477, 0, 1, 0, -0.783477, 0, -0.621421, -60.5886, 4.85449, 6.56458)

[node name="Vfx3" type="Node" parent="Vfxs"]
process_mode = 4

[node name="Debris" parent="Vfxs/Vfx3" instance=ExtResource("9_8i87b")]
transform = Transform3D(-2.45908e-09, -0.0562572, 0.998416, 1, -4.37114e-08, 0, 4.36422e-08, 0.998416, 0.0562572, 43.2163, 8.69606, 63.458)
emitting = true

[node name="Fire" parent="Vfxs/Vfx3" instance=ExtResource("10_m568h")]
transform = Transform3D(0.0562572, 0, 0.998416, 0, 1, 0, -0.998416, 0, 0.0562572, 59.569, -0.553869, 60.9331)

[node name="Fire4" parent="Vfxs/Vfx3" instance=ExtResource("10_m568h")]
transform = Transform3D(0.0562572, 0, 0.998416, 0, 1, 0, -0.998416, 0, 0.0562572, 57.8549, -1.32469, 53.7196)

[node name="Fire2" parent="Vfxs/Vfx3" instance=ExtResource("10_m568h")]
transform = Transform3D(0.0562572, 0, 0.998416, 0, 1, 0, -0.998416, 0, 0.0562572, 29.672, -1.93014, 54.6496)

[node name="Fire3" parent="Vfxs/Vfx3" instance=ExtResource("10_m568h")]
transform = Transform3D(0.0562572, 0, 0.998416, 0, 1, 0, -0.998416, 0, 0.0562572, 42.8143, 0.621339, 62.5392)

[node name="Vfx4" type="Node" parent="Vfxs"]
process_mode = 4

[node name="Debris" parent="Vfxs/Vfx4" instance=ExtResource("9_8i87b")]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -24.2405, 7.72426, 45.7989)
emitting = true

[node name="Fire" parent="Vfxs/Vfx4" instance=ExtResource("10_m568h")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -32.2084, 3.27654, 39.1864)

[node name="Fire2" parent="Vfxs/Vfx4" instance=ExtResource("10_m568h")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -22.2587, 3.36221, 43.2053)

[node name="Fire3" parent="Vfxs/Vfx4" instance=ExtResource("10_m568h")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -27.2751, 3.1731, 46.9804)

[node name="Vfx5" type="Node" parent="Vfxs"]
process_mode = 4

[node name="Debris" parent="Vfxs/Vfx5" instance=ExtResource("9_8i87b")]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 58.656, 4.90998, -12.9243)
emitting = true

[node name="Fire" parent="Vfxs/Vfx5" instance=ExtResource("10_m568h")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 57.4082, 3.8288, 1.37243)

[node name="Fire2" parent="Vfxs/Vfx5" instance=ExtResource("10_m568h")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 50.5419, 6.74723, -12.1987)

[node name="Fire3" parent="Vfxs/Vfx5" instance=ExtResource("10_m568h")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 60.9999, 4.68929, -4.2317)

[node name="Vfx6" type="Node" parent="Vfxs"]
process_mode = 4

[node name="Debris" parent="Vfxs/Vfx6" instance=ExtResource("9_8i87b")]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -34.865, 11.6812, -36.847)
emitting = true

[node name="Fire" parent="Vfxs/Vfx6" instance=ExtResource("10_m568h")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -22.8951, 0.86413, -22.2752)

[node name="Fire2" parent="Vfxs/Vfx6" instance=ExtResource("10_m568h")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10.1075, -0.338925, -39.4308)

[node name="Fire3" parent="Vfxs/Vfx6" instance=ExtResource("10_m568h")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -34.9859, 11.1039, -34.1711)

[node name="Fire4" parent="Vfxs/Vfx6" instance=ExtResource("10_m568h")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -42.9724, 0.347971, -51.6968)

[connection signal="timeout" from="VillageTimer" to="." method="_on_village_timer_timeout"]
